// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> matches snapshot 1`] = `
<Button
  className="sc-AxjAm iiZAfZ ipsa tempora aut sint aperiam occaecati illum"
  disabled={false}
  displayType="solid"
  onClick={[MockFunction]}
  type="submit"
>
  Iure facilis ut explicabo iure. Occaecati officia iure nisi. Maiores recusandae fuga reprehenderit soluta non omnis consequatur enim quia. Et modi tenetur amet modi reprehenderit. Adipisci eius laborum eius aut illo dolorum. Aliquam id sit.
</Button>
`;

exports[`<Button> matches snapshot 2`] = `
<Button
  className="sc-AxjAm bKCvEV ducimus autem sit aspernatur aspernatur quam eligendi"
  disabled={false}
  displayType="outline"
  onClick={[MockFunction]}
  type="reset"
>
  <span>
    ut assumenda sint quia sed exercitationem omnis
  </span>
</Button>
`;

exports[`<Button> matches snapshot 3`] = `
<Button
  className="sc-AxjAm isKaRq vero repellat eveniet assumenda quis quae iusto"
  disabled={true}
  displayType="solid"
  onClick={[MockFunction]}
  type="reset"
>
  Necessitatibus maiores ullam quae corporis qui aut nobis. Consequatur harum qui enim et doloremque voluptate in sunt. Nulla aut sunt est rerum at sint. Fugiat quis et voluptas.
</Button>
`;

exports[`<Button> matches snapshot 4`] = `
<Button
  className="sc-AxjAm gKYImC saepe assumenda deserunt consequatur itaque et in"
  disabled={true}
  displayType="outline"
  onClick={[MockFunction]}
  type="button"
>
  <div>
    aut corrupti sed consectetur soluta inventore laudantium
  </div>
</Button>
`;

exports[`<Button> matches snapshot 5`] = `
<Button
  className="sc-AxjAm gKYImC quos rerum nobis nam dolor quas repellendus"
  disabled={true}
  displayType="outline"
  onClick={[MockFunction]}
  type="submit"
>
  <span>
    inventore aut eveniet beatae incidunt ut ducimus
  </span>
</Button>
`;

exports[`<Button> matches snapshot 6`] = `
<Button
  className="sc-AxjAm gKYImC assumenda ut neque saepe est labore sed"
  disabled={true}
  displayType="outline"
  onClick={[MockFunction]}
  type="submit"
>
  <div>
    totam animi ipsum occaecati et consequatur consectetur
  </div>
</Button>
`;

exports[`<Button> matches snapshot 7`] = `
<Button
  className="sc-AxjAm gKYImC aut distinctio molestias autem expedita omnis sit"
  disabled={true}
  displayType="outline"
  onClick={[MockFunction]}
  type="button"
>
  Nostrum aliquid ea. Architecto accusantium vel enim sint voluptatem porro. Est sed qui repellat assumenda.
</Button>
`;

exports[`<Button> matches snapshot 8`] = `
<Button
  className="sc-AxjAm bKCvEV rem qui hic dolore quibusdam quasi quisquam"
  disabled={false}
  displayType="outline"
  onClick={[MockFunction]}
  type="button"
>
  Excepturi saepe autem quis molestiae et dicta odit. Quisquam qui harum a aut esse unde ea voluptatem. Occaecati eveniet aut eligendi iusto sed. Voluptates odio rem saepe iure quia culpa suscipit totam. Necessitatibus quis ratione eveniet ea totam aut aut.
</Button>
`;
